...
        configureContextMenu(indexPath: indexPath)
    }

    func configureContextMenu(indexPath: IndexPath) -> UIContextMenuConfiguration {
        let context = UIContextMenuConfiguration(identifier: nil, previewProvider: nil) { (_) -> UIMenu? in

            let edit = UIAction(title: "Edit", image: UIImage(systemName: "square.and.pencil"), identifier: nil, discoverabilityTitle: nil, state: .off) { (_) in
                self.showItemDetails(indexPath)
            }
            let delete = UIAction(title: "Delete", image: UIImage(systemName: "trash"), identifier: nil, discoverabilityTitle: nil, attributes: .destructive, state: .off) { (_) in
                let itemSelected = self.storage.todoItems[indexPath.item]
                _ = self.storage.remove(by: itemSelected.id)
                self.collectionView.reloadData()
...
